Fix the vertical spacing around <h1>

--- a/src/_scss/global/_base.scss
+++ b/src/_scss/global/_base.scss
@@ -15,11 +15,19 @@ body {
   margin: 0 auto;
 }
 
-.flow > * + *,
-article:not([class]) > * + * {
-  // FIXME: these should be tokens?
-  margin-top: 1em;
-  margin-top: var(--flow-sp, 1em);
+.flow,
+article:not([class]) {
+  & > * + * {
+    // FIXME: these should be tokens?
+    margin-top: 1em;
+    margin-top: var(--flow-sp, 1em);
+  }
+
+  // <h1>s have a bottom margin, so we can skip the top margin on any sibling element in
+  // case the elements are in a grid layout, which doesn't collapse margins.
+  & > h1 + * {
+    margin-top: 0;
+  }
 }
 
 h1,
@@ -33,9 +41,10 @@ h1 {
   @include font-size(4);
 
   margin-top: 1.5em;
+  margin-bottom: 1.5em;
 
   & + * {
-    margin-top: 1.5em;
+    margin-top: 0;
   }
 }
 
